--- a/src/main.css
+++ b/src/main.css
@@ -18,7 +18,7 @@ max-width: 1550px;
 width: 100%;
 min-height: 100vh;
 margin:  0 auto;
-box-shadow: 0 5px 6px #08a05ca4;
+box-shadow: 0 5px 6px #557567a4;
 padding: 0 15px;
 box-sizing: border-box;
 
@@ -36,13 +36,13 @@ flex-wrap: wrap;
 position: fixed;
 box-sizing: border-box;
 background-color: white;
-box-shadow: 0 5px 10px #08a05ca4;
+box-shadow: 0 10px 10px #557567a4;
 }
 a{
 color: black;
 text-decoration: none;
 text-transform: uppercase;
-list-style: none;
+/* list-style: none; */
 }
 a:hover{
 color: #08a05ca4;
@@ -61,15 +61,15 @@ padding: 0 1rem;
 header ul li a{
 font-weight: bold;
 }
-header .cart {
+.cart {
 position: relative;
 cursor: pointer ;
 }
-header .cart box-icon{
+.cart box-icon{
 width: 45px;
 height: 45px;
 }
-header .cart  span{
+.cart  span{
 position: absolute;
 top: -1rem;
 right: -1.5rem;
@@ -213,16 +213,16 @@ border-radius: 5px;
     position: fixed;
     top: 10%;
     left: 50%;
-    transform: translate(-50%, -50%)
-    scale(.5);
+    transform: translate(-50%, -50%) scale(.5);
     width: 50%;
     height: 45%;
+    padding: 1.6rem;
     border-radius: 8px;
-    overflow-x: scroll ;
-    transition:  all 300ms ease-in-out;
+    overflow-x: scroll;
+    transition: all 300ms ease-in-out;
     background-color: white;
-    opacity: 0; 
-    visibility: visible;
+    opacity: 0;
+    visibility: hidden;
   }
   .carrito h2{
     text-align: center;
@@ -238,18 +238,18 @@ border-radius: 5px;
   }
   .carrito__close box-icon{
     display: inline-block;
-    width: 50%;
-    height: 45px;
+    width: 50px;
+    height: 50px;
     cursor: pointer;
     transition:  all 300ms ease-in-out;
-    margin: 1rem 0  0 0rem;
+    margin: 3rem 0  0 2rem;
   }
   .carrito__close box-icon:hover{
     fill: crimson;
 
   }
   .carrito__center{
-    width: 90%;
+    width: 98%;
     margin: 0 auto;
     /* border: 1px solid; */
   }
@@ -271,15 +271,15 @@ border-radius: 5px;
     font-weight: 600;
     font-size: 1.1rem;
     font-family: Helvetica, sans-serif;
-    margin-left: 1rem;
-    margin-right: 1rem;
+    /* margin-left: 1rem;
+    margin-right: 1rem; */
   }
   .carrito__item .price{
     color: #4d525c;
     font-size: 1.2rem;
     font-weight: bold;
     text-align: start;
-    margin-left: 1rem;
+    margin-left: .1rem;
 
   }
   .carrito__item box-icon{
@@ -474,12 +474,12 @@ border-radius: 5px;
 
 
    /*-----------------------MEDIA---------------------*/
-   @media only screen and (max-width:1000px){
+   /* @media only screen and (max-width:1000px){
     .carrito__item{
         width: 93%;
     }
 
-    }
+    } */
 
     @media only screen and (max-width:700px){
         .carrito{
